# jlconnor.github.io

./: .envrc  .gitignore  Justfile  Makefile  README.md  index.html  pyproject.toml  python.html  requirements.txt  vim-01.html
pages/: index.md  python.md
script/: README.md  TODO.md  gen.py  generate.py
src/: jlconnor_github_io.py  python.md  site.py
src/jlconnor_github_io/: __init__.py
