[project]
name = "jlconnor-github-io"
version = "0.2.0"
description = "Script to build personal site"
authors = [
    { name = "Jason L Connor", email = "jason.connor@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "mistune>=3.1.0",
    "pygments>=2.19.1",
]

[project.scripts]
jlconnor_github_io = "site:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
